changement de main.scss : ajout des imports, ajout de box sizing dans base.scss, ajout propriétés du logo dans header, correction orthographe de functions.css

--- a/home_page.html
+++ b/home_page.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2f306ee3dd.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <title>Ohmyfood : site de réservation gastronomique</title>
 
 </head>
@@ -25,7 +25,7 @@
         <h1>ohmyfood</h1>
     </header>
     <main>
-        <section class="presentation ">
+        <section class="presentation">
             <p><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
             <h2 class="presentation__heading">Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
@@ -137,9 +137,9 @@
 
     </main>
     <footer>
-        <nav>
+        <nav class="nav">
             <ul>
-                <h2>ohmyfood</h2>
+                <h2 class="nav__logo">ohmyfood</h2>
                 <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
