création fichiers gitignore et readme, ajout des couleurs dans variables

--- a/home_page.html
+++ b/home_page.html
@@ -70,7 +70,7 @@
 
 
                 <div class="card"><a href="La_palette_du_goût.html" title="restaurant gastronomique" target="_blank">
-                        <img src="Asset_img/restaurants/La_palette_du_goût.jpg" alt="restaurant la palette du goût">
+                        <img src="assets/img//La_palette_du_goût.jpg" alt="restaurant la palette du goût">
                         <div class="body">
                             <h3>La palette du goût </h3>
                             <p>Ménilmontant</p>
@@ -88,7 +88,7 @@
 
 
                 <div class="card"><a href="La_note_enchantée.html" title="restaurant gastronomique" target="_blank">
-                        <img src="Asset_img/restaurants/La_note_enchantée.jpg" alt="restaurant la note enchantée">
+                        <img src="assets/img//La_note_enchantée.jpg" alt="restaurant la note enchantée">
                         <div class="body">
                             <h3>A la Française</h3>
                             <p>Charonne</p>
@@ -103,12 +103,9 @@
             </div>
 
             <div>
-
                 <div class="card">
-
-
                     <a href="A_la_Française.html" title="restaurant gastronomique" target="_blank">
-                        <img src="Asset_img/restaurants/A_la_Française.jpg" alt="restaurant à la Française" />
+                        <img src="assets/img/A_la_Française.jpg" alt="restaurant à la Française" />
                         <div class="body">
                             <h3>A la Française</h3>
                             <p>Cité Rouge</p>
@@ -121,8 +118,8 @@
             </div>
 
             <div class="card">
-                <a href="Le_délice_des_sens.html" title="restaurant gastronomique" target="_blank">
-                    <img src="Asset_img/restaurants/le_délice_des_sens.jpg" alt="restaurant le délice des sens">
+                <a href="menu_Le_délice_des_sens.html" title="restaurant gastronomique" target="_blank">
+                    <img src="assets/img/le_délice_des_sens.jpg" alt="restaurant le délice des sens">
                     <div class="body">
                         <h3>Le délice des sens</h3>
                         <p>Folie Méricourt</p>
@@ -136,6 +133,7 @@
         </section>
 
     </main>
+    
     <footer>
         <nav class="nav">
             <ul>
