changements : - html home-page : modification des classes et rectification de div dans "restaurant" et dans les liste à puces du footer pour adapter à BEM; - main.scss :layout/nav déplacé à la fin, ajout de btn; -ajout de btn (bouton"nouveau); -création du fichier pour le spinner; -création et modifications du footer; -modifications de home_page.scss : ajout de flex dans main, ajout de height pour présentation et functioning, ajout de la variable border-radius à explain, container restaurant globalement adapté et complété (ajout de flex, "heading", "card", "container-img", "img", "body", "icon-before"), "nav" supprimé pour être placé dans layout. -_variables.scss complété : couleur du footer modifiée, border-selector créé, px de border-card adaptés.

--- a/home_page.html
+++ b/home_page.html
@@ -60,77 +60,82 @@
         <section class="container-restaurant">
             <h2 class="container-restaurant__heading">Restaurants</h2>
 
-
-
-                <a class="restautant__link" class="restaurant__link--hover" href="La_palette_du_goût.html"
-                    title="restaurant gastronomique" target="_blank">
-                    <div class="card">
-                        <div class="card__img">
-                            <img src="assets/img//La_palette_du_goût.jpg" alt="restaurant la palette du goût">
-                        </div>
-                        <div class="body">
-                            <h3 class="card__heading">La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                            <!--coeur*2-->
-                            <p class="card__icon--before"><i class="fa-solid fa-heart"></i> </p>
-                            <p class="card__icon--after"><i class="fa-regular fa-heart"></i></p>
-                        </div>
-                        <button class="card__btn">Nouveau</button>
+            <a class="restaurant-link restaurant-link--hover" href="La_palette_du_goût.html"
+                title="restaurant gastronomique" target="_blank">
+                <div class="restaurant-link__card">
+                    <div class="restaurant-link__container-img">
+                        <img class="restaurant-link__img" src="assets/img//La_palette_du_goût.jpg"
+                            alt="restaurant la palette du goût">
                     </div>
-                </a>
-
-                <a class="restautant__link" href="La_note_enchantée.html" title="restaurant gastronomique"
-                    target="_blank">
-
-                    <div class="card">
-
-                        <div class="card__img">
-                            <img class="card__img" src="assets/img//La_note_enchantée.jpg"
-                                alt="restaurant la note enchantée">
-                        </div>
-                        <div class="card__body">
-                            <h3>A la Française</h3>
-                            <p>Charonne</p>
-                            <!--coeur*2-->
-                            <p class="card__icon--before"><i class="fa-solid fa-heart"></i></p>
-                            <p class="card__icon--after"><i class="fa-regular fa-heart"></i></p>
-                        </div>
-                        <button class="card__btn" class="new">Nouveau</button>
+                    <div class="restaurant-link__footer">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                        <!--coeur*2-->
+                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart"></i> </p>
+                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart"></i></p>
                     </div>
-                </a>
+                </div>
+                <div class="btn">
+                    <button class="btn__new" class="new">Nouveau</button>
+                </div>
+            </a>
 
-                <a class="restaurant__link" href="A_la_Française.html" title="restaurant gastronomique" target="_blank">
-                    <div class="card">
-                        <div class="card__img">
-                            <img class="card__img" src="assets/img/A_la_Française.jpg"
-                                alt="restaurant à la Française" />
-                        </div>
+            <a class="restaurant-link restaurant__link--hover" href="La_note_enchantée.html"
+                title="restaurant gastronomique" target="_blank">
 
-                        <div class="body">
-                            <h3>A la Française</h3>
-                            <p>Cité Rouge</p>
-                            <!--coeur*2-->
-                            <p class="card__icon--before"> <i class="fa-solid fa-heart"></i> </p>
-                            <p class="card__icon--after"><i class="fa-regular fa-heart"></i></p>
-                        </div>
+                <div class="restaurant-link__card">
+
+                    <div class="restaurant-link__container-img">
+                        <img class="restaurant-link__img" src="assets/img//La_note_enchantée.jpg"
+                            alt="restaurant la note enchantée">
                     </div>
-                </a>
-
-                <a href="menu_Le_délice_des_sens.html" title="restaurant gastronomique" target="_blank">
-                    <div class="card">
-                        <div class="card__img">
-                            <img class="card__img" src="assets/img/le_délice_des_sens.jpg"
-                                alt="restaurant le délice des sens">
-                        </div>
-                        <div class="body">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie Méricourt</p>
-                            <!--coeur*2 pour switch-->
-                            <p class="card__icon--before"><i class="fa-solid fa-heart"></i> </p>
-                            <p class="card__icon--before"><i class="fa-regular fa-heart"></i></p>
-                        </div>
+                    <div class="restaurant-link__footer">
+                        <h3>A la Française</h3>
+                        <p>Charonne</p>
+                        <!--coeur*2-->
+                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart"></i> </p>
+                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart"></i></p>
                     </div>
-                </a>
+                    <div class="btn">
+                        <button class="btn__new" class="new">Nouveau</button>
+                    </div>
+                </div>
+            </a>
+
+            <a class="restaurant-link restaurant-link--hover" href="A_la_Française.html"
+                title="restaurant gastronomique" target="_blank">
+                <div class="restaurant-link__card">
+                    <div class="restaurant-link__container-img">
+                        <img class="restaurant-link__img" src="assets/img/A_la_Française.jpg"
+                            alt="restaurant à la Française">
+                    </div>
+
+                    <div class="restaurant-link__footer">
+                        <h3>A la Française</h3>
+                        <p>Cité Rouge</p>
+                        <!--coeur*2-->
+                        <p class="restaurant-link__icon--before"> <i class="fa-solid fa-heart"></i> </p>
+                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart"></i></p>
+                    </div>
+                </div>
+            </a>
+
+            <a class="restaurant-link restaurantlink--hover" href="menu_Le_délice_des_sens.html"
+                title="restaurant gastronomique" target="_blank">
+                <div class="restaurant-link__card">
+                    <div class="restaurant-link__container-img">
+                        <img class="restaurant-link__img" src="assets/img/le_délice_des_sens.jpg"
+                            alt="restaurant le délice des sens">
+                    </div>
+                    <div class="restaurant-link__footer">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie Méricourt</p>
+                        <!--coeur*2 pour switch-->
+                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart"></i> </p>
+                        <p class="restaurant-link__icon--before"><i class="fa-regular fa-heart"></i></p>
+                    </div>
+                </div>
+            </a>
         </section>
 
     </main>
@@ -139,10 +144,13 @@
         <nav class="nav">
             <h2 class="nav__logo">ohmyfood</h2>
             <ul>
-                <li class="nav__link"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                <li class="nav__link"><a href="#"><i class="fa-solid fa-handshake-angle fa-sm"></i>Devenir partenaire</a></li>
-                <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a class="nav__link-icon nav__link--color" href="#"><i class="fa-solid fa-utensils"></i>Proposer un
+                        restaurant</a></li>
+                <li><a class="nav__link-icon nav__link--color" href="#"><i
+                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
+                        partenaire</a></li>
+                <li><a class="nav__link nav__link--color" href="#">Mentions légales</a></li>
+                <li><a class="nav__link nav__link--color" href="#">Contact</a></li>
             </ul>
         </nav>
     </footer>
