-Changements dans html home_page : simplification des class de button, choix de la taille des icones avec font-awesome; -modification dans btn.scss : ajustement de la position, largeur et border-radius, -modifications dans home_page.scss : mise en forme et les icones before et after dans "restaurant-link" ont été complétées pour les positionner, -modifications de button.scss : suppression de class ("style size et border")  après celles du html et ajout des effets sur le bouton avec hover; -ajustements dans nav.scss : position des liens et icones; -dans variables.scss : conversion des px en rem pour les border.

--- a/home_page.html
+++ b/home_page.html
@@ -30,7 +30,7 @@
             <p class="presentation__discover">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
 
             <div class="button">
-                <button class="button__style button__style--size button__style--border button__style--hover">
+                <button class="button__style">
                     Explorez nos restaurants
                 </button>
             </div>
@@ -71,8 +71,8 @@
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
                         <!--coeur*2-->
-                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart"></i> </p>
-                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart"></i></p>
+                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart fa-lg"></i> </p>
+                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart fa-lg"></i></p>
                     </div>
                 </div>
                 <div class="btn">
@@ -93,8 +93,8 @@
                         <h3>A la Française</h3>
                         <p>Charonne</p>
                         <!--coeur*2-->
-                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart"></i> </p>
-                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart"></i></p>
+                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart fa-lg"></i> </p>
+                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart fa-lg"></i></p>
                     </div>
                     <div class="btn">
                         <button class="btn__new" class="new">Nouveau</button>
@@ -114,8 +114,8 @@
                         <h3>A la Française</h3>
                         <p>Cité Rouge</p>
                         <!--coeur*2-->
-                        <p class="restaurant-link__icon--before"> <i class="fa-solid fa-heart"></i> </p>
-                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart"></i></p>
+                        <p class="restaurant-link__icon--before"> <i class="fa-solid fa-heart fa-lg"></i> </p>
+                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart fa-lg"></i></p>
                     </div>
                 </div>
             </a>
@@ -131,8 +131,8 @@
                         <h3>Le délice des sens</h3>
                         <p>Folie Méricourt</p>
                         <!--coeur*2 pour switch-->
-                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart"></i> </p>
-                        <p class="restaurant-link__icon--before"><i class="fa-regular fa-heart"></i></p>
+                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart fa-lg"></i> </p>
+                        <p class="restaurant-link__icon--before"><i class="fa-regular fa-heart fa-lg"></i></p>
                     </div>
                 </div>
             </a>
