modifications html home_page : création d'une div "restaurant" pour  permettre l'insertion des boutons "coeur" dans les cartes indépendamment du lien ,  changement de nom des classes pour en tenir compte avec les fichiers sass,

--- a/home_page.html
+++ b/home_page.html
@@ -58,84 +58,97 @@
         <!--cartes-->
 
         <section class="container-restaurant">
+
             <h2 class="container-restaurant__heading">Restaurants</h2>
 
-            <a class="restaurant-link restaurant-link--hover" href="La_palette_du_goût.html"
-                title="restaurant gastronomique" target="_blank">
-                <div class="restaurant-link__card">
-                    <div class="restaurant-link__container-img">
-                        <img class="restaurant-link__img" src="assets/img//La_palette_du_goût.jpg"
-                            alt="restaurant la palette du goût">
-                    </div>
-                    <div class="restaurant-link__footer">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <!--coeur*2-->
-                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart fa-lg"></i> </p>
-                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart fa-lg"></i></p>
-                    </div>
-                </div>
-                <div class="btn">
-                    <button class="btn__new" class="new">Nouveau</button>
-                </div>
-            </a>
+            <!--carte 1-->
+            <div class="restaurant">
+                <a class="restaurant__link restaurant-link--hover" href="La_palette_du_goût.html"
+                    title="restaurant gastronomique" target="_blank">
+                    <div class="restaurant__card">
+                        <div class="restaurant__container-img">
+                            <img class="restaurant__img" src="assets/img//La_palette_du_goût.jpg"
+                                alt="restaurant la palette du goût">
+                        </div>
+                        <div class="restaurant__footer">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
 
-            <a class="restaurant-link restaurant__link--hover" href="La_note_enchantée.html"
-                title="restaurant gastronomique" target="_blank">
+                        <div class="btn">
+                            <button class="btn__new">Nouveau</button>
+                        </div>
+                    </div>
+                </a>
+                <!--coeur*2-->
+                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
+                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+            </div>
 
-                <div class="restaurant-link__card">
+            <!--carte 2-->
+            <div class="restaurant">
+                <a class="restaurant__link restaurant__link--hover" href="La_note_enchantée.html"
+                    title="restaurant gastronomique" target="_blank">
 
-                    <div class="restaurant-link__container-img">
-                        <img class="restaurant-link__img" src="assets/img//La_note_enchantée.jpg"
-                            alt="restaurant la note enchantée">
+                    <div class="restaurant__card">
+                        <div class="restaurant__container-img">
+                            <img class="restaurant__img" src="assets/img//La_note_enchantée.jpg"
+                                alt="restaurant la note enchantée">
+                        </div>
+                        <div class="restaurant__footer">
+                            <h3>A la Française</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <div class="btn">
+                            <button class="btn__new">Nouveau</button>
+                        </div>
                     </div>
-                    <div class="restaurant-link__footer">
-                        <h3>A la Française</h3>
-                        <p>Charonne</p>
-                        <!--coeur*2-->
-                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart fa-lg"></i> </p>
-                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart fa-lg"></i></p>
-                    </div>
-                    <div class="btn">
-                        <button class="btn__new" class="new">Nouveau</button>
-                    </div>
-                </div>
-            </a>
+                </a>
+                <!--coeur*2-->
+                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
+                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+            </div>
 
-            <a class="restaurant-link restaurant-link--hover" href="A_la_Française.html"
-                title="restaurant gastronomique" target="_blank">
-                <div class="restaurant-link__card">
-                    <div class="restaurant-link__container-img">
-                        <img class="restaurant-link__img" src="assets/img/A_la_Française.jpg"
-                            alt="restaurant à la Française">
+            <!--carte 3-->
+            <div class="restaurant">
+                <a class="restaurant__link restaurant-link--hover" href="A_la_Française.html"
+                    title="restaurant gastronomique" target="_blank">
+                    <div class="restaurant__card">
+                        <div class="restaurant__container-img">
+                            <img class="restaurant__img" src="assets/img/A_la_Française.jpg"
+                                alt="restaurant à la Française">
+                        </div>
+                        <div class="restaurant__footer">
+                            <h3>A la Française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
                     </div>
+                </a>
+                <!--coeur*2-->
+                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
+                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+            </div>
 
-                    <div class="restaurant-link__footer">
-                        <h3>A la Française</h3>
-                        <p>Cité Rouge</p>
-                        <!--coeur*2-->
-                        <p class="restaurant-link__icon--before"> <i class="fa-solid fa-heart fa-lg"></i> </p>
-                        <p class="restaurant-link__icon--after"><i class="fa-regular fa-heart fa-lg"></i></p>
+            <!--carte 4-->
+            <div class="restaurant">
+                <a class="restaurant__link restaurantlink--hover" href="menu_Le_délice_des_sens.html"
+                    title="restaurant gastronomique" target="_blank">
+                    <div class="restaurant__card">
+                        <div class="restaurant__container-img">
+                            <img class="restaurant__img" src="assets/img/le_délice_des_sens.jpg"
+                                alt="restaurant le délice des sens">
+                        </div>
+                        <div class="restaurant__footer">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie Méricourt</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+                <!--coeur*2 pour switch-->
+                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
+                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+            </div>
 
-            <a class="restaurant-link restaurantlink--hover" href="menu_Le_délice_des_sens.html"
-                title="restaurant gastronomique" target="_blank">
-                <div class="restaurant-link__card">
-                    <div class="restaurant-link__container-img">
-                        <img class="restaurant-link__img" src="assets/img/le_délice_des_sens.jpg"
-                            alt="restaurant le délice des sens">
-                    </div>
-                    <div class="restaurant-link__footer">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie Méricourt</p>
-                        <!--coeur*2 pour switch-->
-                        <p class="restaurant-link__icon--before"><i class="fa-solid fa-heart fa-lg"></i> </p>
-                        <p class="restaurant-link__icon--before"><i class="fa-regular fa-heart fa-lg"></i></p>
-                    </div>
-                </div>
-            </a>
         </section>
 
     </main>
