-dans home_page.html: suppression de la class "restaurant link hover" inutilisée; -dans functions.scss : création de la fonction darken utilisée pour la couleur du texte du bouton "new" (couleur unique pour le fonds et le texte)  ; -dans btn.scss : insertion de la fonction darken pour la couleur du texte ; -dans button.scss : délai de transition raccourci pour un effet plus dynamique; -dans home_page.scss : ajout du curseur au survol de "explain".

--- a/home_page.html
+++ b/home_page.html
@@ -63,7 +63,7 @@
 
             <!--carte 1-->
             <div class="restaurant">
-                <a class="restaurant__link restaurant-link--hover" href="La_palette_du_goût.html"
+                <a class="restaurant__link" href="La_palette_du_goût.html"
                     title="restaurant gastronomique" target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
@@ -87,7 +87,7 @@
 
             <!--carte 2-->
             <div class="restaurant">
-                <a class="restaurant__link restaurant__link--hover" href="La_note_enchantée.html"
+                <a class="restaurant__link" href="La_note_enchantée.html"
                     title="restaurant gastronomique" target="_blank">
 
                     <div class="restaurant__card">
@@ -111,7 +111,7 @@
 
             <!--carte 3-->
             <div class="restaurant">
-                <a class="restaurant__link restaurant-link--hover" href="A_la_Française.html"
+                <a class="restaurant__link" href="A_la_Française.html"
                     title="restaurant gastronomique" target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
@@ -131,7 +131,7 @@
 
             <!--carte 4-->
             <div class="restaurant">
-                <a class="restaurant__link restaurantlink--hover" href="menu_Le_délice_des_sens.html"
+                <a class="restaurant__link" href="menu_Le_délice_des_sens.html"
                     title="restaurant gastronomique" target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
