-dans main.scss : modification du nommage du fichier spinner en loader; -suppression du fichier spinner.scss en loader.scss et création du fchier loader.scss avec le loader.

--- a/home_page.html
+++ b/home_page.html
@@ -18,9 +18,17 @@
 </head>
 
 <body>
+
+    <div class="loader">
+        <div class="loader__heading">Oh</div>
+        <div class="loader__heading">my</div>
+        <div class="loader__heading">food<span> .</span><span> .</span><span> .</span></div>
+    </div>
+
     <header class="logo">
         <h1>ohmyfood</h1>
     </header>
+
     <main>
         <section class="presentation">
             <div class="presentation__location"><i class="fa-solid fa-location-dot"></i>
@@ -63,8 +71,8 @@
 
             <!--carte 1-->
             <div class="restaurant">
-                <a class="restaurant__link" href="La_palette_du_goût.html"
-                    title="restaurant gastronomique" target="_blank">
+                <a class="restaurant__link" href="La_palette_du_goût.html" title="restaurant gastronomique"
+                    target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
                             <img class="restaurant__img" src="assets/img//La_palette_du_goût.jpg"
@@ -87,8 +95,8 @@
 
             <!--carte 2-->
             <div class="restaurant">
-                <a class="restaurant__link" href="La_note_enchantée.html"
-                    title="restaurant gastronomique" target="_blank">
+                <a class="restaurant__link" href="La_note_enchantée.html" title="restaurant gastronomique"
+                    target="_blank">
 
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
@@ -111,8 +119,7 @@
 
             <!--carte 3-->
             <div class="restaurant">
-                <a class="restaurant__link" href="A_la_Française.html"
-                    title="restaurant gastronomique" target="_blank">
+                <a class="restaurant__link" href="A_la_Française.html" title="restaurant gastronomique" target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
                             <img class="restaurant__img" src="assets/img/A_la_Française.jpg"
@@ -131,8 +138,8 @@
 
             <!--carte 4-->
             <div class="restaurant">
-                <a class="restaurant__link" href="menu_Le_délice_des_sens.html"
-                    title="restaurant gastronomique" target="_blank">
+                <a class="restaurant__link" href="menu_Le_délice_des_sens.html" title="restaurant gastronomique"
+                    target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
                             <img class="restaurant__img" src="assets/img/le_délice_des_sens.jpg"
