--- a/home_page.html
+++ b/home_page.html
@@ -36,12 +36,11 @@
             </div>
             <h2 class="presentation__heading">Réservez le menu qui vous convient</h2>
             <p class="presentation__discover">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-
-            <div class="button">
-                <button class="button__style">
+ 
+                <button class="button ">
                     Explorez nos restaurants
                 </button>
-            </div>
+             
         </section>
 
         <section class="functioning">
@@ -89,8 +88,8 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
-                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
             </div>
 
             <!--carte 2-->
@@ -113,8 +112,8 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
-                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
             </div>
 
             <!--carte 3-->
@@ -132,8 +131,8 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
-                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
             </div>
 
             <!--carte 4-->
@@ -152,8 +151,8 @@
                     </div>
                 </a>
                 <!--coeur*2 pour switch-->
-                <button class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></button>
-                <button class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></button>
+                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
             </div>
 
         </section>
@@ -164,13 +163,13 @@
         <nav class="nav">
             <h2 class="nav__logo">ohmyfood</h2>
             <ul>
-                <li><a class="nav__link-icon nav__link--color" href="#"><i class="fa-solid fa-utensils"></i>Proposer un
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-utensils"></i>Proposer un
                         restaurant</a></li>
-                <li><a class="nav__link-icon nav__link--color" href="#"><i
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
                             class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
                         partenaire</a></li>
-                <li><a class="nav__link nav__link--color" href="#">Mentions légales</a></li>
-                <li><a class="nav__link nav__link--color" href="#">Contact</a></li>
+                <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
+                <li><a class="nav__link nav__link--color" href="mailto:example@example.com" title="click here">Contact</a></li>
             </ul>
         </nav>
     </footer>
