-modifications dans home_page.html :  changement du nom des class "number" pour le nesting, suppression des dimensions des icones et ajout de la class "container" dans la balise ul du footer ; -modifications dans typography.scss : changement de taille des h2 avec  le mediaqueries pour tablette: -changements dans button.scss : prefixes complétés, modification des padding et margin, modification de l'ombre, application de la mediaqueries pour changeant la largeur du bouton pour les tablettes, effet de brillance rajouté avec suppression de opacity, -changements du loader.scss : ajout de wrap, modification de la taille et gras de la police avec ajout d'une margin pour obtenir un retour  à la ligne avec le wrap, changement du z-index de départ dans keyframes (la valeur 1 étant suffisante), -modification du header.scss : insertion de la mediaqueries pour les tablettes avec logo placé à gauche; -modifications dans nav.scss : ajout de la largeur et hauteur du footer, insertion de la mediqaueries pour aligner les liens et les espacer, ajout du selecteur container et de la mediqaueries tablette pour appliquer les propriétés flex sur ses éléments ainsi que la marge sur les liens , -modifications dans home_page.scss : *insertion des mediaqueries pour tablette  afin d'appliquer wrap sur l'ensemble des éléments du bloc main et les mettre côte à côte, *changement de la valeur de height dans le sélecteur "présentation" avec insertion de la mediqaueries pour tablette (cchangement de marge);  * dans "functioning" modification de la marge, insertion de la mediaqueries pour tablettes, ajout de la couleur background pour la version tablette, changement de couleur au survol du selecteur "explain", ajustement de la dimension du titre pour les tablettes, modification de la taile des nombres en mode tablette, agrandissement des icones, ajustement de la position des icones; dans le selecteur container-restaurant, ajustement des padding et insertion de la mediaqueries pour tablettes pour plac

--- a/home_page.html
+++ b/home_page.html
@@ -46,16 +46,17 @@
         <section class="functioning">
             <h2 class="functioning__heading">Fonctionnement</h2>
             <div class="functioning__container">
-                <p class="functioning__explain"><span class="number">1</span>
+                
+                <p class="functioning__explain"><span class="functioning__number">1</span>
                     <i class="fa-solid fa-mobile-screen-button"></i>Choissez un restaurant
                 </p>
 
-                <p class="functioning__explain"><span class="number">2</span>
+                <p class="functioning__explain"><span class="functioning__number">2</span>
                     <span class="functionning__icon"><i class="fa-solid fa-list"></i></span>
                     Composez votre menu
                 </p>
 
-                <p class="functioning__explain"><span class="number">3</span>
+                <p class="functioning__explain"><span class="functioning__number">3</span>
                     <i class="fa-solid fa-store"></i>Dégustez au restaurant
                 </p>
             </div>
@@ -88,8 +89,8 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--before"> <i class="fa-regular fa-heart"></i> </div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart"></i></div>
             </div>
 
             <!--carte 2-->
@@ -112,8 +113,8 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart"></i></div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart"></i></div>
             </div>
 
             <!--carte 3-->
@@ -131,8 +132,8 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart"></i></div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart "></i></div>
             </div>
 
             <!--carte 4-->
@@ -151,10 +152,10 @@
                     </div>
                 </a>
                 <!--coeur*2 pour switch-->
-                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart fa-lg"></i></div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart fa-lg"></i></div>
+                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart"></i></div>
+                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart"></i></div>
             </div>
-
+ 
         </section>
 
     </main>
@@ -162,7 +163,7 @@
     <footer>
         <nav class="nav">
             <h2 class="nav__logo">ohmyfood</h2>
-            <ul>
+            <ul class="nav__container">
                 <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-utensils"></i>Proposer un
                         restaurant</a></li>
                 <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
